# Cosmo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  cmake.yml
cmake/: FetchLagom.cmake
src/: Cosmo.cpp  Cosmo.h  Dump.cpp  Forward.h  Helpers.cpp  Helpers.h  RecipientFilter.h  RemoveSourceSpecifics.h  Signature.cpp  Signature.h  Types.h
src/Scripting/: Command.cpp  Command.h  Entity.cpp  Entity.h  EntityPrototype.cpp  EntityPrototype.h  EventNames.h  Forward.h  Game.cpp  Game.h  GlobalObject.cpp  GlobalObject.h  Helpers.cpp  Helpers.h  PlayerPrototype.cpp  PlayerPrototype.h  Server.cpp  Server.h  TeamRoundTimerPrototype.cpp  TeamRoundTimerPrototype.h
src/Types/: BaseEntity.h  GameEvent.h  IEngineSound.h  TeamRoundTimer.h
